# GitCommitGenerator

./: .gitignore  README.md  evaluation_results.json  main.py  pyproject.toml  requirements.txt  setup.py  test_base_model.py  test_nb.ipynb  train.py
commit_gen/: __init__.py  cli.py  config.py  generator.py  git_utils.py
scripts/: download_dataset.py  format_for_training.py  plot_loss.py  prepare_dataset.py  qualitative_test.py  quick_quality_test.py  test_model.py  upload_to_huggingface.py
