[project]
name = "gitcommitgenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "bitsandbytes==0.41.3",
    "datasets==2.16.0",
    "peft==0.7.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.47.0",
    "trl==0.7.4",
    "wandb>=0.23.0",
]
